--- a/biblio.bib
+++ b/biblio.bib
@@ -214,6 +214,22 @@ RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiv
    year = {2020},
 }
 
+@article{percentilesFenton2015,
+   abstract = {Objective Key components in the assessment of a child in the emergency department (ED) are their heart and respiratory rates. In order to interpret these signs, practitioners must know what is normal for a particular age. The aim of this paper is to develop age-specific centiles for these parameters and to compare centiles with the previously published work of Fleming and Bonafide, and the Advanced Paediatric Life Support (APLS) reference ranges. Design A retrospective cross-sectional study. Setting The ED of the Children's Hospital at Westmead, Australia. Patients Afebrile, Triage Category 5 (low priority) patients aged 0-15 years attending the ED. Interventions Centiles were developed using quantile regression analysis, with cubic B-splines to model the centiles. Main outcome measures Centile charts were compared with previous studies by concurrently plotting the estimates. Results 668 616 records were retrieved for ED attendances from 1995 to 2011, and 111 696 heart and respiratory rates were extracted for inclusion in the analysis. Graphical comparison demonstrates that with heart rate, our 50th centile agrees with the results of Bonafide, is considerably higher than the Fleming centiles and fits well between the APLS reference ranges. With respiratory rate, our 50th centile was considerably lower than the comparison centiles in infants, becomes higher with increasing age and crosses the lower APLS range in infants and upper range in teenagers. Conclusions Clinicians should consider adopting these centiles when assessing acutely unwell children. APLS should review their normal values for respiratory rate in infants and teenagers.},
+   author = {Fenton O'Leary and Andrew Hayen and Francis Lockie and Jennifer Peat},
+   doi = {10.1136/archdischild-2014-307401},
+   issn = {14682044},
+   issue = {8},
+   journal = {Archives of Disease in Childhood},
+   month = {8},
+   pages = {733-737},
+   pmid = {25784747},
+   publisher = {BMJ Publishing Group},
+   title = {Defining normal ranges and centiles for heart and respiratory rates in infants and children: A cross-sectional study of patients attending an Australian tertiary hospital paediatric emergency department},
+   volume = {100},
+   year = {2015},
+}
+
 
 %%%% Rpackages %%%%
 
