--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -506,29 +506,30 @@ En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el c
 % Se modifica la geometría (los márgenes) de la página y se coloca en formato horizontal:
 \newgeometry{top=10mm, bottom=10mm, left=12mm, right=12mm}
 \begin{landscape}
-\begin{table}[!ht]
-    \centering
-    \caption{Age-related percentiles}
-    \label{tab:age_percentiles}
-    \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|}
-    \hline
-        Age & Age\_0 & Amount & 1st & 5th & 10th & 25th & 50th & 75th & 90th & 95th & 99th  \\ \hline
-        0--$<$3 months & 3365,00 & 109,00 & 119,00 & 123,00 & 132,00 & 142,00 & 154,00 & 165,00 & 171,00 & 181,00  \\ \hline
-        3--$<$6 months & 4493,00 & 100,00 & 113,00 & 118,00 & 124,00 & 135,00 & 145,00 & 155,00 & 161,00 & 174,00  \\ \hline
-        6--$<$9 months & 5927,00 & 100,00 & 110,00 & 115,00 & 121,00 & 131,00 & 141,00 & 151,00 & 159,00 & 172,00  \\ \hline
-        10--$<$12 months & 6005,00 & 98,00 & 105,00 & 111,00 & 119,00 & 127,00 & 139,00 & 150,00 & 160,00 & 174,00  \\ \hline
-        12--$<$18 months & 10,00 & 94,00 & 101,00 & 107,00 & 116,00 & 124,00 & 136,00 & 149,00 & 159,00 & 176,00  \\ \hline
-        18--$<$24 months & 9370,00 & 90,00 & 99,00 & 103,00 & 112,00 & 120,00 & 132,00 & 145,00 & 154,00 & 172,00  \\ \hline
-        2--$<$3 years & 15,00 & 85,00 & 96,00 & 99,00 & 107,00 & 117,00 & 126,00 & 138,00 & 146,00 & 162,00  \\ \hline
-        3--$<$4 years & 11,00 & 80,00 & 89,00 & 94,00 & 102,00 & 111,00 & 121,00 & 131,00 & 138,00 & 152,00  \\ \hline
-        4--$<$6 years & 15,00 & 74,00 & 82,00 & 88,00 & 96,00 & 105,00 & 117,00 & 126,00 & 133,00 & 146,00  \\ \hline
-        6--$<$8 years & 9100,00 & 69,00 & 78,00 & 81,00 & 90,00 & 100,00 & 111,00 & 122,00 & 128,00 & 141,00  \\ \hline
-        8--$<$12 years & 12,00 & 64,00 & 72,00 & 77,00 & 84,00 & 94,00 & 104,00 & 116,00 & 122,00 & 135,00  \\ \hline
-        12--$<$15 years & 6054,00 & 59,00 & 64,00 & 69,00 & 77,00 & 86,00 & 97,00 & 106,00 & 113,00 & 127,00  \\ \hline
-        15--$<$16 years & 1339,00 & 56,00 & 62,00 & 66,00 & 74,00 & 83,00 & 94,00 & 103,00 & 111,00 & 122,00  \\ \hline
-    \end{tabular}
-    \caption{Diagrama de Flujo Imputación por el método de \textit{k-Nearest Neighbor Imputation} según el \textit{Estudio 2}}\label{tabla:percentiles-frecuencia-cardiaca}
-\end{table}
+    \begin{table}[htbp]
+        \centering
+        \caption{Age-related percentiles}
+        \label{tab:age_percentiles}
+        \begin{tabular}{ll*{10}{S[table-format=3.2]}}
+            \toprule
+            Age & Age\_0 & {Amount} & {1st} & {5th} & {10th} & {25th} & {50th} & {75th} & {90th} & {95th} & {99th} \\
+            \midrule
+            0--$<$3 months & months & 3365,00 & 109,00 & 119,00 & 123,00 & 132,00 & 142,00 & 154,00 & 165,00 & 171,00 & 181,00 \\
+            3--$<$6 months & months & 4493,00 & 100,00 & 113,00 & 118,00 & 124,00 & 135,00 & 145,00 & 155,00 & 161,00 & 174,00 \\
+            6--$<$9 months & months & 5927,00 & 100,00 & 110,00 & 115,00 & 121,00 & 131,00 & 141,00 & 151,00 & 159,00 & 172,00 \\
+            10--$<$12 months & months & 6005,00 & 98,00 & 105,00 & 111,00 & 119,00 & 127,00 & 139,00 & 150,00 & 160,00 & 174,00 \\
+            12--$<$18 months & months & 10,00 & 94,00 & 101,00 & 107,00 & 116,00 & 124,00 & 136,00 & 149,00 & 159,00 & 176,00 \\
+            18--$<$24 months & months & 9370,00 & 90,00 & 99,00 & 103,00 & 112,00 & 120,00 & 132,00 & 145,00 & 154,00 & 172,00 \\
+            2--$<$3 years & years & 15,00 & 85,00 & 96,00 & 99,00 & 107,00 & 117,00 & 126,00 & 138,00 & 146,00 & 162,00 \\
+            3--$<$4 years & years & 11,00 & 80,00 & 89,00 & 94,00 & 102,00 & 111,00 & 121,00 & 131,00 & 138,00 & 152,00 \\
+            4--$<$6 years & years & 15,00 & 74,00 & 82,00 & 88,00 & 96,00 & 105,00 & 117,00 & 126,00 & 133,00 & 146,00 \\
+            6--$<$8 years & years & 9100,00 & 69,00 & 78,00 & 81,00 & 90,00 & 100,00 & 111,00 & 122,00 & 128,00 & 141,00 \\
+            8--$<$12 years & years & 12,00 & 64,00 & 72,00 & 77,00 & 84,00 & 94,00 & 104,00 & 116,00 & 122,00 & 135,00 \\
+            12--$<$15 years & years & 6054,00 & 59,00 & 64,00 & 69,00 & 77,00 & 86,00 & 97,00 & 106,00 & 113,00 & 127,00 \\
+            15--$<$16 years & years & 1339,00 & 56,00 & 62,00 & 66,00 & 74,00 & 83,00 & 94,00 & 103,00 & 111,00 & 122,00 \\
+            \bottomrule
+        \end{tabular}
+    \end{table}
 \end{landscape}
 \restoregeometry 
 
