--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -510,7 +510,7 @@ En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el c
         \centering
         \caption{Age-related percentiles}
         \label{tab:age_percentiles}
-        \begin{tabular}{ll*{10}{S[table-format=3.2]}}
+        \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|}
             \toprule
             Age & Age\_0 & {Amount} & {1st} & {5th} & {10th} & {25th} & {50th} & {75th} & {90th} & {95th} & {99th} \\
             \midrule
