--- a/biblio.bib
+++ b/biblio.bib
@@ -240,3 +240,25 @@ RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiv
    year = {2016},
    url = {http://ltorgo.github.io/DMwR2},
 }
+
+@Manual{rriskDistributions,
+  title = {{rriskDistributions}: Fitting Distributions to Given Data or Known Quantiles},
+  author = {{Natalia Belgorodski} and {Matthias Greiner} and {Kristin Tolksdorf} and {Katharina Schueller} and {Matthias Flor} and {Lutz Göhring}},
+  year = {2017},
+  note = {{R package version 2.1.2}},
+  description = {Collection of functions for fitting distributions to given data or by known quantiles. Two main functions fit.perc() and fit.cont() provide users a GUI that allows choosing a most appropriate distribution without any knowledge of the R syntax. Note, this package is a part of the 'rrisk' project.},
+  license = {GPL (>= 3)},
+  lazyLoad = {yes},
+  url = {http://www.bfr.bund.de/cd/52158},
+  depends = {R (>= 2.11.0)},
+  imports = {stats, graphics, mc2d, eha, msm, tcltk, tkrplot},
+  systemRequirements = {Tcl/Tk (>= 8.5), Tktable (>= 2.9)},
+  date = {2017-03-22},
+  encoding = {UTF-8},
+  collate = {'rriskDistributions-package.R' 'rriskDistributions_functions.R'},
+  roxygenNote = {6.0.1},
+  needsCompilation = {no},
+  maintainer = {Matthias Greiner <matthias.greiner\@bfr.bund.de>},
+  repository = {CRAN},
+  datePublication = {2017-03-24 13:17:43 UTC},
+}
