--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -499,7 +499,7 @@ Una vez que se han dividido los datos de cada paciente en franjas horarias se im
 
 \subsubsection{Transformaciones de los Datos}\label{sec:transformaciones-de-datos}
 
-En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el componente \textit{EDAD} de los datos de monitorización de los pacientes pediátricos. Esto se ha hecho para que los algoritmos de clasificación discreta (\textit{Random Forest}) no se centren en la edad del paciente a la hora de predecir si el paciente va a presentar \textit{Deterioro} o no. Para eliminar este componente, se ha recurrido al estudio~\cite{percentilesFenton2015}, el cual define rangos normales y percentiles para las frecuencias cardíacas y respiratorias en lactantes y niños, a partir de un estudio transversal de pacientes que acudieron a un servicio de urgencias pediátrico en un hospital australiano. Se utilizarán de dicho estudio los valores en referencia a la \textit{Frecuencia Cardiaca}. A continuación se muestran los valores de \textit{Frecuencia Cardiaca} en función de la \textit{Edad} en 
+En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el componente \textit{EDAD} de los datos de monitorización de los pacientes pediátricos. Esto se ha hecho para que los algoritmos de clasificación discreta utilizados (\textit{Random Forest}) no se centren en la edad del paciente a la hora de predecir si el paciente va a presentar \textit{Deterioro} o no. Para eliminar este componente, se ha recurrido al estudio~\cite{percentilesFenton2015}, el cual recoge los valores de frecuencia cardiaca y frecuencia respiratoria de varios pacientes pediátricos y los organiza por percentiles, este estudio recoge datos de pacientes que acudieron a un servicio de urgencias pediátrico en un hospital australiano. Se utilizarán de dicho estudio los valores en referencia a la \textit{Frecuencia Cardiaca}. A continuación se muestran los valores de \textit{Frecuencia Cardiaca} en función de la \textit{Edad} en la Tabla~\ref{tabla:age_percentiles}:
 
 \newpage
 \thispagestyle{empty}
@@ -508,7 +508,7 @@ En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el c
 \begin{landscape}
     \begin{table}[htbp]
         \centering
-        \caption{Percentiles de Frecuencia Cardiaca en función de la Edad del estudio~\cite{percentilesFenton2015}}
+        \caption{Percentiles de Frecuencia Cardiaca en función de la Edad (~\cite{percentilesFenton2015})}
         \label{tab:age_percentiles}
         \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|}
             \toprule
@@ -534,9 +534,29 @@ En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el c
 \restoregeometry 
 
  
+Para esta transformación lo primero que se ha realizado es; partiendo de la Tabla~\ref{tabla:age_percentiles} se han generado distribuciones normales para cada uno de los percentiles de la \textit{Frecuencia Cardiaca} en función de la \textit{Edad}. Para ello se ha utilizado la función \texttt{get.get.norm.par} del paquete de R \texttt{rriskDistributions} que genera distribuciones normales a partir de los percentiles y los valores cuantílicos, ~\cite{rriskDistributions}. A continuación se muestran las distribuciones normales generadas para cada uno de los percentiles de la \textit{Frecuencia Cardiaca} en función de la \textit{Edad} en la Table~\ref{tabla:age_percentiles_dnorm}:
 
-
-
-
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{l S[table-format=3.7] S[table-format=2.8]}
+        \toprule
+        Age & {Mean} & {SD}  \\ 
+        \midrule
+        0--$<$3 months & 142.8975133 & 16.106937  \\
+        3--$<$6 months & 135.1382501 & 14.79739075  \\
+        6--$<$9 months & 131.4553211 & 14.30632493  \\
+        10--$<$12 months & 128.5778996 & 15.07784388  \\
+        12--$<$18 months & 125.5921228 & 15.61675197  \\
+        18--$<$24 months & 121.6350336 & 15.40451936  \\
+        2--$<$3 years & 117.0837814 & 14.46325736  \\
+        3--$<$4 years & 111.5315149 & 14.3094006  \\
+        4--$<$6 years & 106.0971108 & 15.21660598  \\
+        6--$<$8 years & 100.6070164 & 15.48392466  \\
+        8--$<$12 years & 94.46367306 & 14.81625947  \\
+        12--$<$15 years & 86.81086606 & 14.53201736  \\
+        15--$<$16 years & 83.84981343 & 14.47422122  \\
+        \bottomrule
+    \end{tabular}
+\end{table}
 
 
