--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,8 @@
 \usepackage{pdflscape}  % Para colocar páginas en formato apaisado.
 \usepackage{array} % Para centrar verticalmente el contenido de las celdas de una tabla.
 \usepackage{svg} % Add this line in the preamble to use the svg package
+\usepackage{booktabs}
+\usepackage{siunitx}
 % ---------------------------------------------- %
 
 
