--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -104,8 +104,9 @@ En primer lugar se ha realizado una limpieza de datos. Esta limpieza de datos ha
     \item \textbf{Variables No Relevantes:} Eliminar variables que no aportan información relevante para el estudio.
 \end{enumerate}
 
- \paragraph{Validación de Archivos}
+\paragraph{Validación de Archivos}
 
+ 
 Por parte del hospital se han recopilado 2 archivos de datos diferentes. Estos archivos de datos son:
 
 \begin{itemize}
@@ -227,8 +228,6 @@ Según la Figura \ref{fig:missing-descriptive-cross} los \textit{Neutrofilos}, \
 \newpage
 
 
-
-
 \subparagraph*{Pacientes con Datos Faltantes} 
 
 Cuando se habla de pacientes con datos faltantes se hace referencia a aquellos pacientes que tienen datos faltantes en las variables \textit{Series Temporales} de la Tabla \ref{tabla:variables_estudio}. 
@@ -290,7 +289,9 @@ En la siguientes Figuras \ref{fig:missing-FC} y \ref{fig:missing-SatO2} se muest
 \end{landscape}
 \restoregeometry 
 
- A la hora de determinar los pacientes que van a ser incluidos en el estudio se va a tener en cuenta la variable \textit{Deterioro}. Esta variable indica si el paciente ha sufrido un deterioro durante las primeras 24 h de ingreso. Se considera \textit{Deterioro} si el paciente ha sido trasladado a la UCIP o ha recibido Oxigenación de Alto Flujo. 
+\paragraph{Selección de Pacientes Válidos}\label{sec:seleccion_pacientes}
+
+ A la hora de determinar los pacientes que van a ser incluidos en el presente \textit{Trabajo de Fin de Máster} se va a tener en cuenta la variable generada y contrastada con los médicos pediatras: \textit{Deterioro}. Esta variable indica si el paciente ha sufrido un deterioro durante las primeras $24$ h de ingreso considerándose \textit{deterioro} si el paciente ha sido trasladado a la UCIP o ha recibido Oxigenación de Alto Flujo. 
 
  Estudiando los datos se ve como todos los pacientes que han sido trasladados a la UCIP han tenido previamente una intervención en la que se les ha aplicado Oxigenación de Alto Flujo pero no a todos a los que se les ha aplicado Oxigenación de Alto Flujo han sido trasladados a la UCIP. De esta forma los pacientes que muestren \textit{Deterioro} serán los mismos a los que se les ha aplicado OAF. Esto se puede ver en el diagrama de Venn en la Figura \ref{fig:venn-OAF-UCIP}.
 
@@ -302,10 +303,7 @@ En la siguientes Figuras \ref{fig:missing-FC} y \ref{fig:missing-SatO2} se muest
 \end{figure}
 
 
-Se utilizará la variable \textit{Deterioro} como indicadora de que el paciente ha sufrido OAF o ha sido trasladado a la UCIP. Según el Diagrama de Venn de la Figura \ref{fig:venn-OAF-UCIP} se puede ver como todos los pacientes que han sido trasladados a la UCIP han tenido previamente una intervención en la que se les ha aplicado Oxigenación de Alto Flujo pero no a todos a los que se les ha aplicado Oxigenación de Alto Flujo han sido trasladados a la UCIP. De esta forma los pacientes que muestren \textit{Deterioro} serán los mismos a los que se les ha aplicado OAF.
-
-
-A la hora de eliminar pacientes será interesante ver cómo afecta también a la proporción de pacientes que han sufrido \textit{Deterioro} y los que no. En la siguiente Tabla \ref{tabla:ratio-deterioro} se muestra la cantidad de pacientes que presentan \textit{Deterioro}, los que no y el ratio entre \textit{Deterioro} y no \textit{Deterioro} del conjunto de pacientes totales.
+A la hora de eliminar pacientes del estudio por su alto porcentaje de valores faltantes, será interesante ver cómo afecta también a la proporción de pacientes que han sufrido \textit{Deterioro} y los que no. En la siguiente Tabla \ref{tabla:ratio-deterioro} se muestra la cantidad de pacientes que presentan \textit{Deterioro}, los que no y el ratio entre \textit{Deterioro} y no \textit{Deterioro} del conjunto total de $79$ pacientes.
 
 \begin{table}[H]
     \centering
@@ -320,7 +318,9 @@ A la hora de eliminar pacientes será interesante ver cómo afecta también a la
 
 \newpage
 
-Se van a plantear dos metodologías para establecer la exclusión de pacientes en el estudio en función de las variables \textit{Series Temporales} de \textit{Frecuencia Cardiaca} y \textit{Saturación de O$_2$}. El objetivo es ver cómo varían la cantidad de pacientes incluidos en el estudio en ambos casos. Un paciente será incluido en el estudio si en las primeras horas establecidas su porcentaje de valores faltantes está por debajo de un \textit{threshold} establecido previamente. A continuación se muestran los dos métodos propuestos: 
+\subparagraph{Metodologías Exclusión de Pacientes}\label{sec:metodologias_exclusion_pacientes}
+
+Se van a plantear $2$ metodologías para establecer la exclusión de pacientes en el estudio en función de las variables \textit{Series Temporales} de \textit{Frecuencia Cardiaca} y \textit{Saturación de O$_2$}. El objetivo es ver cómo varían la cantidad de pacientes incluidos en el estudio en ambos casos. Un paciente será incluido en el estudio si en las primeras horas establecidas su porcentaje de valores faltantes está por debajo de un \textit{threshold} definido previamente. A continuación se muestran los dos métodos propuestos: 
 
 \begin{itemize}
     \item \textbf{Método 1:} Se va a ir aumentando progresivamente el \textit{threshold} de valores faltantes desde el $5 \%$ hasta el $20 \%$ en intervalos de $2.5 \%$.  Es decir se va a estudiar si existen más pacientes que cumplen el criterio de admisión en las primeras $24$ horas cambiando el \textit{threshold}. Este método se puede ver en la Figura \ref{fig:metodo1}.
@@ -343,16 +343,16 @@ Se van a plantear dos metodologías para establecer la exclusión de pacientes e
 
 Con los anteriores métodos se ha podido observar cómo realmente el hecho de ser más restrictivos con los datos faltantes no implica que se vayan a excluir muchos más pacientes, y el cambio del ratio $\frac{\textit{Pacientes con Deterioro}}{\textit{Pacientes No Deterioro}}$ es casi inapreciable. Por lo tanto, los datos faltantes se acumulan en un número concreto de pacientes a los que el seguimiento se les ha interrumpido en mayor medida.
 
-En la situación más restrictiva del \textit{Método 1} de la Figura \ref{fig:metodo1} el ratio es de $ \frac{14}{54} \approx 0.26$ y en la menos restrictiva es de $ \frac{16}{59} \approx 0.272$. Cabe decir que la situación más restrictiva es aquella que en las primeras $24$ horas se pide que haya un menor porcentaje de valores faltantes, es decir la combinación de valores más a la izquierda en el eje $x$ de la Figura \ref{fig:metodo1}. Este método muestra un considerable aumento de la muestra de pacientes si se opta por la opción menos restrictiva respecto a la más restrictiva, se pasa de $68$ pacientes a $75$ aumentando en casi un $10 \%$ la muestra total. 
+En la situación más restrictiva del \textit{Método 1} de la Figura \ref{fig:metodo1} el ratio es de $ \frac{14}{54} \approx 0.26$ y en la menos restrictiva es de $ \frac{16}{59} \approx 0.272$. Cabe decir que la situación más restrictiva es aquella que en las primeras $24$ horas se pide que haya un menor porcentaje de valores faltantes, es decir la combinación de valores más a la izquierda en el eje $x$ de la Figura \ref{fig:metodo1}. Este método muestra un aumento de la muestra de casi un $10 \%$ si se opta por la opción menos restrictiva respecto a la más restrictiva, se pasa de $68$ pacientes a $75$ pacientes totales. 
 
-Por otro lado en la situación más restrictiva del \textit{Método 2} de la Figura~\ref{fig:metodo2} el ratio es de $ \frac{13}{53} \approx 0.245$ y en la situación menos restrictiva el ratio es de $ \frac{13}{53} \approx 0.245$. La variación total de pacientes a incluir en el estudio es de apenas un $3 \%$, se pasa de $68$ pacientes a excluir a $2$ en la situación más restrictiva, obteniendo un total de $66$ pacientes. Cabe aclarar que la situación más restrictiva según este método es aquella que considera más horas de monitorización manteniendo el \textit{threshold} en el $5 \%$ de valores faltantes, es decir la combinación de valores más alejada en el eje $x$ de la Figura \ref{fig:metodo2}.
+Por otro lado en la situación más restrictiva del \textit{Método 2} de la Figura~\ref{fig:metodo2} el ratio es de $ \frac{16}{52} \approx 0.307$ y en la situación menos restrictiva el ratio es de $ \frac{13}{53} \approx 0.245$. La variación total de pacientes a incluir en el estudio es de apenas un $3 \%$, se pasa de $68$ pacientes a excluir a $2$ en la situación más restrictiva, obteniendo un total de $66$ pacientes. Cabe aclarar que la situación más restrictiva según este método es aquella que considera más horas de monitorización manteniendo el \textit{threshold} en el $5 \%$ de valores faltantes, es decir la combinación de valores más alejada en el eje $x$ de la Figura \ref{fig:metodo2}.
 
-Para no alterar los datos debido a una posterior imputación y debido a que la variación de los datos es algo importante en el estudio se optará por establecer el \textit{threshold} en el $5 \%$ de valores faltantes, haciendo referencia a la siguiente entrada bibliográfica: \cite{Scheffer2002}. 
+Para no alterar los datos debido a una posterior imputación y debido a que la variación de los datos es algo considerado como importante en el estudio, se optará por establecer el \textit{threshold} en el $5 \%$ de valores faltantes, haciendo referencia a la siguiente entrada bibliográfica: \cite{Scheffer2002}. 
 
-Junto con este último criterio mencionado se van a hacer dos grupos de pacientes a la hora de hacer el estudio planteado por el presente Trabajo de Fin de Máster:
+Junto con este último criterio mencionado se van a hacer dos grupos de pacientes a la hora de hacer el estudio planteado por el presente Trabajo de Fin de Máster, cada grupo de pacientes generado seguirá unas ciertas indicaciones lo que permitirá plantear dos estudios con diferentes objetivos:
 
 \begin{itemize}
-    \item \textbf{Valid\_patients\_P1:} Serán aquellos que en las primeras 24 horas de monitorización tengan un porcentaje de valores faltantes por debajo del $5\%$. Estos pacientes serán aquellos que sigan el criterio más restrictivo del \textit{Método 1} de la Figura \ref{fig:metodo1}. 
+    \item \textbf{Valid\_patients\_P1:} Serán aquellos que en las primeras $24$ horas de monitorización tengan un porcentaje de valores faltantes por debajo del $5\%$. Estos pacientes serán aquellos que sigan el criterio más restrictivo del \textit{Método 1} de la Figura \ref{fig:metodo1}. 
     \begin{table}[H]
         \centering
         \begin{tabular}{|m{2cm}|m{2.25cm}|m{2cm}|m{2cm}|}
@@ -362,7 +362,7 @@ Junto con este último criterio mencionado se van a hacer dos grupos de paciente
         \end{tabular}
         \caption{Pacientes Totales, con Deterioro, sin Deterioro y Ratio entre Deterioro y No Deterioro seleccionados para el estudio según el \textit{Método 1}}\label{tabla:ratio-deterioro-P1}
     \end{table}
-    \item \textbf{Valid\_patients\_P2:} Serán aquellos que en las primeras $8$ horas de monitorización tengan un porcentaje de valores faltantes por debajo del $5\%$. Estos pacientes serán aquellos que siguen el criterio más restrictivo del \textit{Método 2} de la Figura \ref{fig:metodo2}. Además, se excluirán aquellos pacientes que hayan presentado \textit{Deterioro} en las primeras 8 horas de monitorización. Esto será así, pues se pretende predecir en las primeras $8$ horas qué pacientes son los que van a presentar \textit{Deterioro} en las próximas horas.
+    \item \textbf{Valid\_patients\_P2:} Serán aquellos que en las primeras $8$ horas de monitorización tengan un porcentaje de valores faltantes por debajo del $5\%$. Estos pacientes serán aquellos que siguen el criterio más restrictivo del \textit{Método 2} de la Figura \ref{fig:metodo2}. Además, se excluirán aquellos pacientes que hayan presentado \textit{Deterioro} en las primeras $8$ horas de monitorización. Esto será así, pues se pretende predecir en las primeras $8$ horas qué pacientes son los que van a presentar \textit{Deterioro} en las siguientes.
     \begin{table}[H]
         \centering
         \begin{tabular}{|m{2cm}|m{2.25cm}|m{2cm}|m{2cm}|}
@@ -378,11 +378,11 @@ Junto con este último criterio mencionado se van a hacer dos grupos de paciente
 Se ha decidido pues que se van a realizar $2$ estudios:
 
 \begin{itemize}
-    \item \textbf{Estudio 1:} Se estudiarán a los pcientes pediátricos tomando como referencia las primeras $24$ horas de monitorización, se querrá así pues mantener la unidad \textit{día} en el estudio. Se ha visto que reduciendo el \textit{scope} según el \textit{Método 2} no se consigue un aumento de la muestra de pacientes significativa, y por otro lado reducir la restricción de pacientes con valores faltantes por encima del $5\%$ para aumentar la cantidad de pacientes en el estudio, no es recomendable según la referencia \cite{Scheffer2002}.
+    \item \textbf{Estudio 1:} Se estudiarán a los pacientes pediátricos tomando como referencia las primeras $24$ horas de monitorización, se querrá así pues mantener la unidad \textit{día} en el estudio. Se ha visto que reduciendo el \textit{scope} según el \textit{Método 2} no se consigue un aumento de la muestra de pacientes significativa, y por otro lado reducir la restricción de pacientes con valores faltantes por encima del $5\%$ para aumentar la cantidad de pacientes en el estudio, no es recomendable según la referencia \cite{Scheffer2002}.
     \item \textbf{Estudio 2:} Se estudiarán a los pacientes pediátricos tomando como referencia las primeras $8$ horas de monitorización y excluyendo a aquellos pacientes que han presentado OAF en esas 8 primeras horas así como las variables que se registran más tarde de las $8$ primeras horas. Se ha decidido utilizar las primeras $8$ horas de monitorización ya que se pretende predecir en las primeras $8$ horas qué pacientes son los que van a presentar \textit{Deterioro} en las siguientes próximas horas.
 \end{itemize}
 
-
+\newpage
 \subsubsection{Imputación de Datos}\label{sec:imputacion-de-datos}
 
 Una vez que se han decidido los pacientes que se van a incluir tanto en el \textit{Estudio 1} como en el \textit{Estudio 2} se ha de realizar una imputación de datos para permitir a los algoritmos de clasificación discreta poder trabajar con el total de los pacientes, no solo con aquellos que no muestran datos faltantes. 
@@ -497,9 +497,16 @@ Una vez que se han dividido los datos de cada paciente en franjas horarias se im
 \end{landscape}
 \restoregeometry 
 
+\newpage
 \subsubsection{Transformaciones de los Datos}\label{sec:transformaciones-de-datos}
 
-En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el componente \textit{EDAD} de los datos de monitorización de los pacientes pediátricos. Esto se ha hecho para que los algoritmos de clasificación discreta utilizados (\textit{Random Forest}) no se centren en la edad del paciente a la hora de predecir si el paciente va a presentar \textit{Deterioro} o no. Para eliminar este componente, se ha recurrido al estudio~\cite{percentilesFenton2015}, el cual recoge los valores de frecuencia cardiaca y frecuencia respiratoria de varios pacientes pediátricos y los organiza por percentiles, este estudio recoge datos de pacientes que acudieron a un servicio de urgencias pediátrico en un hospital australiano. Se utilizarán de dicho estudio los valores en referencia a la \textit{Frecuencia Cardiaca}. A continuación se muestran los valores de \textit{Frecuencia Cardiaca} en función de la \textit{Edad} en la Tabla~\ref{tabla:age_percentiles}:
+En el presente \textit{Trabajo de Fin de Máster} se ha pretendido eliminar el componente \textit{EDAD} de los datos de monitorización de los pacientes pediátricos. Esto se ha hecho por dos motivos, el primero es que a la hora de realizar clusters no queremos dividir los pacientes por \textit{PESO} y \textit{EDAD}, se quieren buscar otras variable que permitan hacer grupos, el segundo es que los algoritmos de clasificación discreta utilizados (\textit{Random Forest}) no se centren en la edad del paciente a la hora de predecir si el paciente va a presentar \textit{Deterioro} o no, será una variable de entrada pero se quiere reducir el peso decisivo en ella.
+
+Se van a plantear dos formas de eliminar este efecto.
+
+\paragraph{Eliminar la Componente \textit{EDAD} de los Datos de Monitorización de los Pacientes Pediátricos Mediante la Transformación Cuantílica de los Datos}\label{sec:eliminar-edad-1} \\
+
+Para eliminar este componente, se ha recurrido al estudio~\cite{percentilesFenton2015}, el cual recoge los valores de \textit{Frecuencia Cardiaca} y \textit{Frecuencia Respiratoria}  de varios pacientes pediátricos y los organiza por percentiles, este estudio recoge datos de pacientes que acudieron a un servicio de urgencias pediátrico en un hospital australiano. Se utilizarán de dicho estudio los valores en referencia a la \textit{Frecuencia Cardiaca}. A continuación se muestran los valores de \textit{Frecuencia Cardiaca} en función de la \textit{Edad} en la Tabla~\ref{tabla:age_percentiles}:
 
 \newpage
 \thispagestyle{empty}
@@ -634,7 +641,225 @@ Para ello se ha utilizado la función \texttt{pnorm} de \texttt{R} que calcula e
     \end{lstlisting}
     \caption{Código Transformación de los datos de \textit{Frecuencia Cardiaca} de cada paciente en función de su \textit{Edad}}
     \label{cod:transformación-frecuencia-cardiaca}
-    \end{code}
+\end{code}
 
 
+Se va a mostrar una visualización de la transformación de todos los datos de \textit{Frecuencia Cardiaca}. Cada valor de cada paciente será etiquetado con la edad de dicho paciente y se mostraran en un gráfico de densidad para cada rango de edad. En la Figura~\ref{fig:transformacion-frecuencia-cardiaca-edad} se muestra el resultado de la transformación realizada según lo descrito en este apartado, de los datos de \textit{Frecuencia Cardiaca} de todos los pacientes en función de su \textit{Edad} y el la Figura~\ref{frecuencia-cardiaca-edad} se muestran los datos de \textit{Frecuencia Cardiaca} de todos los pacientes en función de su \textit{Edad} sin transformar.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/transformacion-frecuencia-cardiaca-edad.png}
+    \caption{Transformación de los datos de \textit{Frecuencia Cardiaca} de todos los pacientes en función de su \textit{Edad}}
+    \label{fig:transformacion-frecuencia-cardiaca-edad}
+\end{figure}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lcc}
+        \toprule
+        \textbf{Intervalos de Edad (Meses)} & \textbf{Media} \\
+        \midrule
+        $0 \leq \text{EDAD} < 5$ & 0.5976350 \\
+        $5 \leq \text{EDAD} < 10$ & 0.6632027 \\
+        $\text{EDAD} \geq 10$ & 0.6829290 \\
+        \bottomrule
+    \end{tabular}
+    \caption{Valores Promedio de Frecuencia Cardiaca Transformados en Función de la Edad}\label{tabla:frecuencia-cardiaca-edad-transformada}
+\end{table}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/frecuencia-cardiaca-edad.png}
+    \caption{Datos de \textit{Frecuencia Cardiaca} de todos los pacientes en función de su \textit{Edad}}
+    \label{fig:frecuencia-cardiaca-edad}
+\end{figure}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lcc}
+        \toprule
+        \textbf{Intervalos de Edad (Meses)} & \textbf{Media} \\
+        \midrule
+        $0 \leq \text{EDAD} < 5$ & 148.2984 \\
+        $5 \leq \text{EDAD} < 10$ & 143.7214 \\
+        $\text{EDAD} \geq 10$ & 137.6679 \\
+        \bottomrule
+    \end{tabular}
+    \caption{Valores Promedio de Frecuencia Cardiaca en Función de la Edad}
+    \label{tabla:frecuencia-cardiaca-edad}
+\end{table}
+
+Al observar que las medias de la Tabla~\ref{tabla:frecuencia-cardiaca-edad-transformada} por \textit{Edad} no concuerdan una vez haber hechas las transformaciones, puede haber dos interpretaciones posibles: o bien los datos recopilados de la fuente~\cite{percentilesFenton2015} no son completamente precisos, o bien existe un intervalo específico de pacientes que experimentan una variabilidad mucho mayor en su \textit{Frecuencia Cardíaca} cuando se enferman dentro de un cuadro con complicaciones respiratorias, lo que afecta significativamente a la media de dicho intervalo.
+
+\paragraph{Eliminar la Componente \textit{EDAD} de los Datos de Monitorización de los Pacientes Pediátricos Mediante la Transformación Escalada de los Datos}\label{sec:eliminar-edad-2} \\
+
+Se va a plantear otra transformación mediante el escalado de los datos para ver si se puede paliar de esta forma el efecto de la \textit{EDAD}. 
+
+Para escalar los datos se deben de realizar dos pasos:
+
+\begin{enumerate}
+    \item Calcular la media (\(\bar{x}\)) y la desviación estándar (\(s\)) de los datos de \textit{Frecuencia Cardiaca} de todos los pacientes.
+    \[
+        \bar{x} = \frac{\sum_{i=1}^{n} x_i}{n}, \quad s = \sqrt{\frac{\sum_{i=1}^{n} (x_i - \bar{x})^2}{n-1}}
+    \]
+
+    \item Restar a cada valor de \textit{Frecuencia Cardiaca} de cada paciente la media y dividirlo por la desviación estándar.
+    \[
+        x_{\text{centered}_{ij}} = x_{ij} - \bar{x}, \quad x_{\text{scaled}_{ij}} = \frac{x_{\text{centered}_{ij}}}{s}
+    \]
+\end{enumerate}
+
+El proceso de transformación se llevó a cabo utilizando el siguiente código (~\cite{BeckerChambersWilks1988}):
+
+\begin{code}[H]
+    \begin{lstlisting}
+scale(x, center = TRUE, scale = TRUE)
+    \end{lstlisting}
+    \caption{Transformación de datos de \textit{Frecuencia Cardiaca} mediante Escalado}\label{cod:transformacion-fc-escalado}
+ \end{code}
+
+
+Una vez realizada esta transformación los resultados son los siguientes: 
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/frecuencia-cardiaca-edad-escalada.png}
+    \caption{Datos de \textit{Frecuencia Cardiaca} Escalados de todos los pacientes en función de su \textit{Edad}}
+    \label{fig:frecuencia-cardiaca-edad-escala}
+\end{figure}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lcc}
+        \toprule
+        \textbf{Intervalos de Edad (Meses)} & \textbf{Media} \\
+        \midrule
+        $0 \leq \text{EDAD} < 5$ & 0.01018835 \\
+        $5 \leq \text{EDAD} < 10$ & 0.01371264 \\
+        $\text{EDAD} \geq 10$ & 0.03299302 \\
+        \bottomrule
+    \end{tabular}
+    \caption{Valores Promedio de Frecuencia Cardiaca Escalados en Función de la Edad}
+    \label{tabla:frecuencia-cardiaca-escalada-edad}
+\end{table}
+
+En este caso se ha conseguido con mayor éxito eliminar la componente de la \textit{EDAD} de los datos de \textit{Frecuencia Cardiaca} de los pacientes en comparación con la transformación realizada en la Sección~\ref{sec:eliminar-edad-1}.
+
+
+\newpage
+\subsubsection{Análisis Descriptivo}\label{sec:transformaciones-de-datos}
+
+A continuación se muestra el análisis descriptivo de los $79$ pacientes recopilados por el presente \textit{Trabajo de Fin de Máster}. 
+
+\newpage
+\thispagestyle{empty}
+% Se modifica la geometría (los márgenes) de la página y se coloca en formato horizontal:
+\newgeometry{top=10mm, bottom=10mm, left=12mm, right=12mm}
+\begin{landscape}
+    \begin{table}[h]
+        \centering
+        \caption{Descripción de Variables}
+        \begin{tabular}{lcccccccc}
+        \hline
+        Variable & EDAD & PESO & EG & PCT & PCR & LEUCOCITOS & NEUTROFILOS & LINFOCITOS \\ \hline
+        Min. & 0.30 & 2.81 & 25.0 & 0.0600 & 0.1000 & 6000 & 1800 & 1400 \\
+        1st Qu. & 1.80 & 4.38 & 37.0 & 0.1725 & 0.9625 & 8500 & 3300 & 3200 \\
+        Median & 4.60 & 6.26 & 39.0 & 0.4250 & 2.5500 & 11600 & 5600 & 4800 \\
+        Mean & 6.83 & 6.54 & 37.7 & 1.8725 & 5.4432 & 12188 & 5588 & 4912 \\
+        3rd Qu. & 10.85 & 8.65 & 40.0 & 2.8075 & 8.6250 & 14600 & 7400 & 5900 \\
+        Max. & 29.00 & 12.00 & 41.0 & 7.5100 & 28.3000 & 22000 & 10900 & 10900 \\ \hline
+        Variable & FR\_0\_8h & FR\_8\_16h & FR\_16\_24h & FLUJO2\_0\_8H & FLUJO2\_8\_16h & FLUJO2\_16\_24h \\ \hline
+        Min. & 26.00 & 22.00 & 24.00 & 0.000 & 0.000 & 0.000 \\
+        1st Qu. & 40.00 & 36.00 & 38.50 & 1.000 & 0.600 & 0.500 \\
+        Median & 44.00 & 44.00 & 43.00 & 1.500 & 1.000 & 1.000 \\
+        Mean & 46.73 & 44.23 & 44.01 & 1.326 & 1.211 & 1.071 \\
+        3rd Qu. & 53.50 & 51.50 & 48.00 & 2.000 & 2.000 & 1.500 \\
+        Max. & 96.00 & 68.00 & 68.00 & 3.000 & 3.000 & 3.000 \\ \hline
+        \end{tabular}
+        \label{tab:datos_descripcion_cuantitativos}
+    \end{table}
+\end{landscape}
+\restoregeometry 
+    
+\newpage
+\thispagestyle{empty}
+% Se modifica la geometría (los márgenes) de la página y se coloca en formato horizontal:
+\newgeometry{top=10mm, bottom=10mm, left=12mm, right=12mm}
+\begin{landscape}
+\begin{table}[h]
+    \centering
+    \caption{Distribución de Variables Categóricas Multicategoría}
+    \begin{tabular}{lccc}
+    \hline
+    ETIOLOGIA & ALIMENTACION & SEXO \\
+    \hline
+    NO      :33   & ABSOL  : 6    & MASC:42 \\
+    VRS     :43   & NORMAL :53    & FEM :37 \\
+    COVID   : 0   & SNG/STP:17    & \\
+    GRIPE   : 0   & NA's   : 3    & \\
+    OTRO    : 3   &                & \\
+    VRS+OTRO: 0   &                & \\
+    \hline
+    \end{tabular}\label{tabla:distribucion_variables_categoricas_multicat}
+\end{table}
+
+\begin{table}[h]
+    \centering
+    \caption{Distribución de Variables Categóricas SI/NO (Part 1)}
+    \begin{tabular}{lcccccccc}
+    \hline
+        ~ & PALIVIZUMAB & LM & DERMATITIS & ALERGIAS & TABACO & ENFERMEDAD\_BASE & RADIOGRAFIA & ANALITICA \\
+        \hline
+        NO & 73 & 47 & 74 & 71 & 30 & 58 & 58 & 56 \\
+        SI & 6 & 32 & 5 & 8 & 36 & 21 & 8 & 23 \\
+        NA's & ~ & ~ & ~ & ~ & 13 & ~ & 13 & ~ \\
+        \hline
+    \end{tabular}
+    \label{tabla:distribucion_variables_categoricas_si_no_1}
+\end{table}
+
+\begin{table}[h]
+    \centering
+    \caption{Distribución de Variables Categóricas SI/NO (Part 2)}
+    \begin{tabular}{lcccccccc}
+    \hline
+        ~ & SUERO & SNG & GN\_INGRESO & OAF & OAF\_AL\_INGRESO & OAF\_TRAS\_INGRESO & UCIP & DETERIORO \\
+        \hline
+        NO & 59 & 64 & 18 & 61 & 74 & 66 & 72 & 61 \\
+        SI & 20 & 15 & 57 & 18 & 5 & 13 & 7 & 48 \\
+        NA's & ~ & ~ & 4 & ~ & ~ & ~ & ~ & ~ \\
+        \hline
+    \end{tabular}
+    \label{tabla:distribucion_variables_categoricas_si_no_2}
+\end{table}
+
+\begin{table}[h]
+    \centering
+    \caption{Distribución de Variables Categóricas Escalas}
+    \begin{tabular}{lcccccc}
+    \hline
+        ~ & SAPI\_0\_8h & SAPI\_8\_16h & SAPI\_16\_24h & SCORE\_CRUCES\_INGRESO & SCORE\_WOOD\_DOWNES\_INGRESO & SCORE\_WOOD\_DOWNES\_24H  \\ \hline
+        0 & 6 & 5 & 11 & 7 & ~ &   \\ \hline
+        1 & 23 & 36 & 31 & 8 & ~ &   \\ \hline
+        2 & 30 & 21 & 23 & 12 & 2 & 2  \\ \hline
+        3 & 11 & 9 & 7 & 22 & 4 & 4  \\ \hline
+        4 & 6 & 3 & 2 & 17 & 6 & 6  \\ \hline
+        5 & 3 & ~ & ~ & 7 & 15 & 15  \\ \hline
+        6 & 0 & ~ & 1 & 1 & 12 & 12  \\ \hline
+        7 & ~ & ~ & ~ & ~ & 27 & 27  \\ \hline
+        8 & ~ & ~ & ~ & ~ & 9 & 9  \\ \hline
+        9 & ~ & ~ & ~ & ~ & 2 & 2  \\ \hline
+        10 & ~ & ~ & ~ & ~ & 1 & 1  \\ \hline
+        11 & ~ & ~ & ~ & ~ & 1 & 1  \\ \hline
+        NA´S & ~ & 5 & 4 & ~ & ~ &   \\ \hline
+    \end{tabular}
+    \label{tabla:distribucion_variables_categoricas_escalas}
+\end{table}
+
+\end{landscape}
+\restoregeometry 
+
+
+    
+    
