--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -689,7 +689,7 @@ Se va a mostrar una visualización de la transformación de todos los datos de \
     \label{tabla:frecuencia-cardiaca-edad}
 \end{table}
 
-Al observar que las medias de la Tabla~\ref{tabla:frecuencia-cardiaca-edad-transformada} por \textit{Edad} no concuerdan una vez haber hechas las transformaciones, puede haber dos interpretaciones posibles: o bien los datos recopilados de la fuente~\cite{percentilesFenton2015} no son completamente precisos, o bien existe un intervalo específico de pacientes que experimentan una variabilidad mucho mayor en su \textit{Frecuencia Cardíaca} cuando se enferman dentro de un cuadro con complicaciones respiratorias, lo que afecta significativamente a la media de dicho intervalo.
+Al observar que las medias de la Tabla~\ref{tabla:frecuencia-cardiaca-edad-transformada} por \textit{Edad} no concuerdan una vez haber hechas las transformaciones, puede haber dos interpretaciones posibles: o bien los datos recopilados de la fuente~\cite{percentilesFenton2015} no son completamente precisos, o bien existe un intervalo específico de pacientes que experimentan una variabilidad mucho mayor en su \textit{Frecuencia Cardíaca} cuando se enferman dentro de un cuadro con complicaciones respiratorias, lo que afecta significativamente a la media de dicho intervalo. Esta segunda aclaración parte de observar que una vez hecha la transformación la distribución se encuentra por encima del percentil $50\%$ en todos los intervalos de \textit{Edad}, lo que muestra que los pacientes con problemas respiratorios tienen una \textit{Frecuencia Cardiaca} más alta que los pacientes considerados en el estudio de referencia~\cite{percentilesFenton2015}.
 
 \paragraph{Eliminar la Componente \textit{EDAD} de los Datos de Monitorización de los Pacientes Pediátricos Mediante la Transformación Escalada de los Datos}\label{sec:eliminar-edad-2} \\
 
