--- a/main.tex
+++ b/main.tex
@@ -369,14 +369,18 @@ every picture/.append style={
 \section*{AGRADECIMIENTOS} % Se añade un asterisco a \section para que el título no esté numerado.
 \addcontentsline{toc}{section}{AGRADECIMIENTOS} % Al utilizar \section* se ha de añadir manualmente el apartado al índice (Table Of Contents, TOC).
 
-Agradezco a mis tutores Carolina y Andrés por su apoyo incondicional. Por todas la reuiones y dudas y por ser tan importantes en mi motivación por el mundo de la investigación.  \dots
+Agradezco a mis tutores Carolina y Andrés por su apoyo incondicional. Por todas la reuniones y dudas y por ser tan importantes en mi motivación por el mundo de la investigación.  
 
-Gracias a \dots
+Doy gracias a mi novia Mariona, por estar a mi lado en todo momento y por ser mi apoyo incondicional en la elaboración de este trabajo, por su inteligencia y por acompañarme y motivarme en todo momento. 
 
-A \dots \ por \dots
+Gracias a mis compañeros Pablo y Ana de la universidad de Aalto por su apoyo y compañía en la elaboración de este trabajo. 
 
-\afterpage{\blankpage} % Se añade una página en blanco después de los agradecimientos.
+Gracias a Jose Manuel y Alberto por invitarme a la Universidad de Alcalá, por a presentarme a su equipo y darme la oportunidad de presentar mi trabajo frente a ellos.
 
+Gracias en último lugar a Pablo Garrido, por ser un educador referente en la Universidad Politécnica de Madrid, por motivarnos y enseñarnos todos los días qué significa ser ingeniero, por hacernos ver que con una ingeniería se puede y por ser un ejemplo a seguir.
+
+
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
